# dns_sd2

./: Cargo.toml  README.md
examples/: browse.rs  register.rs  socket.rs
src/: enums.rs  header.rs  lib.rs  message.rs  name.rs  question.rs  record.rs  service.rs  utility.rs
src/protocols/: announce.rs  browse.rs  goodbye_packet.rs  handler.rs  known_answer_suppression.rs  mod.rs  name_compression.rs  probe.rs  probe_conflict.rs  register.rs  update_ttl.rs
src/records/: A.rs  AAAA.rs  PTR.rs  SRV.rs  TXT.rs  mod.rs
