[package]
name = "dns_sd2"
version = "0.1.0"
edition = "2021"


[dependencies]
bitvec = "1.0.1"
if-addrs = "0.7.0"
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.8.5"
socket2 = "0.4.4"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = [
    "net",
    "time",
    "rt-multi-thread",
    "macros",
] }
