[package]
name = "dns_sd2"
version = "0.1.0"
edition = "2021"
keywords = ["dnssd", "mdns", "dns_sd"]
categories = ["network-programming"]

description = "dns_sd2 is a crate which attempts to correctly implement DNS_SD and Mdns RFC Specifications for registering and browsing services"

readme = "README.md"
license-file = "LICENSE"

repository = "https://github.com/soundprojects/dns_sd2"


[dependencies]
async-stream = "0.3.3"
bitvec = "1.0.1"
bytes = "1.2.1"
futures = "0.3.23"
if-addrs = "0.7.0"
log = "0.4"
packed_struct = "0.10.0"
pretty_env_logger = "0.4"
rand = "0.8.5"
socket2 = "0.4.4"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = [
    "net",
    "signal",
    "time",
    "rt-multi-thread",
    "macros",
] }
tokio-util = { version = "0.7.3", features = ["net", "codec"] }
